[gd_scene load_steps=23 format=3 uid="uid://dg2sqch3jtd3h"]

[ext_resource type="Script" uid="uid://ccfvg0731wml7" path="res://scripts/core/fsm/state_machine.gd" id="1_038oa"]
[ext_resource type="Texture2D" uid="uid://4d68lc3a6uwp" path="res://assets/icon.svg" id="1_p728r"]
[ext_resource type="Script" uid="uid://sagekmxdwjpe" path="res://scripts/enemies/skeleton.gd" id="1_s0h66"]
[ext_resource type="Script" uid="uid://bvecx6fek77np" path="res://scripts/enemies/states/enemy_idle_state.gd" id="2_3mw36"]
[ext_resource type="Script" uid="uid://cnaea40kdh1f3" path="res://scripts/components/animation_component.gd" id="2_pxfki"]
[ext_resource type="Script" uid="uid://cndcfdfejnpon" path="res://scripts/components/stats_component.gd" id="2_xxwgs"]
[ext_resource type="Resource" uid="uid://dmqim54pik8nk" path="res://data/stats/skeleton_stats.tres" id="3_lj2r1"]
[ext_resource type="Script" uid="uid://cq7nayflwwt05" path="res://scripts/enemies/states/enemy_chase_state.gd" id="4_vncds"]
[ext_resource type="Script" uid="uid://dbt2oyeqhc5bu" path="res://scripts/enemies/states/enemy_attack_state.gd" id="6_quxur"]
[ext_resource type="Script" uid="uid://bci6iykvj8w5a" path="res://scripts/components/attack_component.gd" id="10_quxur"]
[ext_resource type="Script" uid="uid://bv6wfr1422str" path="res://scripts/components/grid_movement_component.gd" id="11_vnbgq"]
[ext_resource type="Resource" uid="uid://b27y5ph3w53qj" path="res://data/attacks/skeleton_claw.tres" id="11_xro8k"]
[ext_resource type="PackedScene" uid="uid://c4bbgluq74ake" path="res://scenes/ui/HealthBar.tscn" id="13_xro8k"]
[ext_resource type="Script" uid="uid://crxo2p6i3ss52" path="res://scripts/components/loot_component.gd" id="14_f0dbl"]
[ext_resource type="Resource" uid="uid://d053rkg5v7tfo" path="res://data/loot/skeleton_loot_table.tres" id="15_s01nw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s0h66"]
radius = 357.022

[sub_resource type="Animation" id="Animation_pxfki"]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_quxur"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xro8k"]
_data = {
&"Attack": SubResource("Animation_pxfki"),
&"RESET": SubResource("Animation_quxur")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_f0dbl"]
polygon = PackedVector2Array(0, 40, 80, 0, 0, -40, -80, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_xro8k"]
radius = 50.01

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_f0dbl"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("StatsComponent:current_health")
properties/1/spawn = true
properties/1/replication_mode = 2

[node name="Skeleton" type="CharacterBody2D" groups=["characters", "enemies"]]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_s0h66")

[node name="AnimationComponent" type="Node" parent="."]
script = ExtResource("2_pxfki")

[node name="AggroRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRadius"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_s0h66")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xro8k")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_038oa")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("animation_component", "attack_component", "grid_movement_component", "stats_component")]
script = ExtResource("2_3mw36")
animation_component = NodePath("../../AnimationComponent")
attack_component = NodePath("../../AttackComponent")
grid_movement_component = NodePath("../../GridMovementComponent")
stats_component = NodePath("../../StatsComponent")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("animation_component", "attack_component", "grid_movement_component", "stats_component")]
script = ExtResource("4_vncds")
animation_component = NodePath("../../AnimationComponent")
attack_component = NodePath("../../AttackComponent")
grid_movement_component = NodePath("../../GridMovementComponent")
stats_component = NodePath("../../StatsComponent")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("animation_component", "attack_component", "grid_movement_component", "stats_component")]
script = ExtResource("6_quxur")
animation_component = NodePath("../../AnimationComponent")
attack_component = NodePath("../../AttackComponent")
grid_movement_component = NodePath("../../GridMovementComponent")
stats_component = NodePath("../../StatsComponent")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 3
occluder = SubResource("OccluderPolygon2D_f0dbl")
occluder_light_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("1_p728r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xro8k")

[node name="HealthBar" parent="." instance=ExtResource("13_xro8k")]
offset_top = -85.0
offset_bottom = -55.0

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("2_xxwgs")
stats_data = ExtResource("3_lj2r1")

[node name="GridMovementComponent" type="Node" parent="."]
script = ExtResource("11_vnbgq")

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("10_quxur")
attack_data = ExtResource("11_xro8k")

[node name="LootComponent" type="Node" parent="."]
script = ExtResource("14_f0dbl")
loot_table = ExtResource("15_s01nw")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_f0dbl")

[connection signal="body_entered" from="AggroRadius" to="." method="_on_aggro_radius_body_entered"]
